2010-08-19 Braden McDaniel  <braden@endoframe.com>

	Added an accessor to get the set of listeners listening to an
	event emitter.

	* src/libopenvrml/openvrml/event.cpp: Added doc-comments for
	listener accessors.
	* src/libopenvrml/openvrml/event.h
	(openvrml::event_emitter::listeners<FieldValue>() const): Added
	member function template to get (a copy of) the set of listeners.
	(openvrml::field_value_emitter<FieldValue>::listeners() const):
	Added member function template to get the set of listeners.

2010-08-15 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Removed reference to ide-projects/Makefile.

2010-08-14 Braden McDaniel  <braden@endoframe.com>

	Added Visual C++ 2010 project files.  These files are now
	interspersed in the source directories.

	* Makefile.am
	(EXTRA_DIST): Add OpenVRML.sln.
	* OpenVRML.sln: Added file.
	* examples/sdl_viewer.cpp
	(resource_fetcher::do_get_resource(const
	std::string&)::file_resource_istream::do_type() const): Fully
	qualify boost::next.
	* examples/Makefile.am
	(EXTRA_DIST): Add Visual Studio 2010 project files.
	* examples/sdl-viewer.vcxproj: Added file.
	* examples/pretty-print.vcxproj: Added file.
	* ide-projects/Makefile.am: Removed file.
	* ide-projects/Windows/VisualC9_0/OpenVRML/OpenVRML.sln: Removed
	file.
	* ide-projects/Windows/VisualC9_0/OpenVRML/javascript/javascript.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc:
	Moved to src/libopenvrml/openvrml.rc.
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml-config.h:
	Moved to src/libopenvrml/openvrml-config-win32.h.
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-dl/openvrml-dl.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc:
	Moved to src/libopenvrml-gl/openvrml-gl.rc.